# ratel

./: .dockerignore  .firebaserc  .gitignore  .gitleaks.toml  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIOXUS.md  DYNAMODB_MIGRATION.md  LOCAL_DEVELOPMENT.md  Makefile  README.md  REWARD.md  ROADMAP.md  RUN-launchpad-demo.md  agent.md  docker-compose.common.yaml  docker-compose.test.yaml  docker-compose.yaml  firebase.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  publish.sh  pubspec.yaml  sitemap.xml
app/auth/: .gitignore  Cargo.toml  Dioxus.toml  build.rs
app/auth/assets/: ratel-auth.js  tailwind.css
app/auth/js/: package-lock.json  package.json  webpack.config.js
app/auth/js/src/: firebase.js  index.js  wallet.js
app/auth/src/: config.rs  lib.rs  provider.rs
app/auth/src/context/: mod.rs  user_context.rs
app/auth/src/controllers/: change_account.rs  get_me.rs  list_accounts.rs  login.rs  mod.rs  reset_password.rs  send_code.rs  signup.rs  update_user.rs
app/auth/src/hooks/: use_user_context.rs
app/auth/src/interop/: mod.rs  wallet_connect.rs
app/auth/src/models/: email_template.rs  user_oauth.rs  user_phone_number.rs  user_principal.rs  user_team.rs  user_team_group.rs
app/auth/src/utils/: evm.rs  mod.rs  referral_code.rs  sha256_baseurl.rs  telegram.rs  uuid.rs
app/common/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  tailwind.css
app/common/js/: package-lock.json
app/common/js/src/: index.js
app/common/src/: lib.rs  logger.rs  provider.rs  run.rs  server_lib.rs
app/common/src/components/: mod.rs
app/common/src/config/: environment.rs  log_level.rs  portone_config.rs
app/common/src/contexts/: team_context.rs
app/common/src/dev_tools/: toast_tools.rs
app/common/src/hooks/: mod.rs  use_infinite_query.rs  use_scroll_lock.rs
app/common/src/macros/: dynamo_entity.rs  dynamo_enum.rs
app/common/src/middlewares/: session_layer.rs
app/common/src/models/: mod.rs
app/common/src/providers/: toast_provider.rs
app/common/src/query/: mod.rs
app/common/src/traits/: bookmarker.rs  item_iter.rs
app/common/src/types/: composite_partition.rs  entity_type.rs  error.rs  list_response.rs  mod.rs  oauth_provider.rs  partition.rs  space_app_name.rs  space_app_type.rs  space_user_role.rs
app/common/src/utils/: sha256.rs  time.rs
app/membership/: Cargo.toml  Dioxus.toml  build.rs
app/membership/js/: package-lock.json
app/membership/js/src/: index.js
app/membership/src/: config.rs  lib.rs  main.rs  provider.rs  route.rs
app/membership/src/components/: i18n.rs  membership_card.rs  membership_plan.rs  membership_purchase_modal.rs  membership_receipt_modal.rs  mod.rs
app/membership/src/controllers/: change_membership.rs  get_membership.rs  history.rs  identify.rs  mod.rs
app/membership/src/interop/: mod.rs
app/membership/src/models/: membership.rs  mod.rs  payment.rs  traits.rs
app/posts/: Cargo.toml  Makefile  build.rs
app/posts/assets/: tailwind.css
app/posts/src/: config.rs  provider.rs  route.rs
app/posts/src/components/: mod.rs  my_drafts.rs  my_posts.rs
app/posts/src/controllers/: create_post.rs  create_space.rs  delete_post.rs  get_post.rs  like_post.rs  list_posts.rs  list_user_drafts.rs  list_user_posts.rs  mod.rs  update_post.rs
app/posts/src/models/: post.rs  post_artwork.rs  post_comment.rs  post_comment_like.rs  post_like.rs  post_repost.rs  team.rs  team_group.rs  team_owner.rs
app/posts/src/services/: mod.rs  vector_indexer.rs
app/posts/src/types/: author.rs  space_publish_state.rs  space_type.rs  visibility.rs
app/posts/src/utils/: validator.rs
app/posts/src/views/: mod.rs
app/ratel/: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  build.rs  index.html  tailwind.css
app/ratel-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/ratel-tauri/src-tauri/.cargo/: config.toml
app/ratel-tauri/src-tauri/capabilities/: default.json
app/ratel-tauri/src-tauri/icons/: icon.icns
app/ratel-tauri/src-tauri/src/: lib.rs  main.rs
app/ratel/.cargo/: config.toml
app/ratel/android/: AndroidManifest.xml
app/ratel/assets/: common-tailwind.css  completion_overlay.css  dx-components-theme.css  main.css  tailwind-colors.css
app/ratel/assets/design/: action-edit-discussion-cards.html  action-edit-poll-cards.html  action-edit-quiz-cards.html  analyze-create-arena.html  analyze-detail-arena.html  analyze-list-arena.html  app-settings-analyzes-scroll.html  app-settings-file-scroll.html  app-settings-general-scroll.html  app-settings-panels-scroll.html  badges.html  discussion-mobile-comments.html  discussion-viewer.html  home-arena.html  leaderboard.html  new-post.html  poll-analyze-detail-arena.html  poll-viewer.html  profile.html  quiz-action.html  reward-setting-arena.html  simple-editor.html  space-admin-overview-edit.html  space-participant.html  team-draft.html  team-members.html  team-membership.html  team-setting.html  team-subscription.html
app/ratel/assets/designs/: home-arena.html  team-arena.html  team-draft.html  team-members.html  team-membership.html  team-reward.html  team-setting.html
app/ratel/js/: package-lock.json  package.json  webpack.config.js
app/ratel/js/src/: index.js
app/ratel/src/: app.rs  config.rs  layout.rs  lib.rs  main.rs  root_layout.rs  route.rs
app/shell/: Cargo.toml  Dioxus.toml  Dockerfile  Makefile  build.rs
app/shell/assets/: main.css  tailwind-colors.css  tailwind.css
app/shell/js/: package-lock.json  package.json
app/shell/src/: app.rs  layout.rs  lib.rs  main.rs  route.rs
app/spaces/common/: Cargo.toml  Dioxus.toml  build.rs
app/spaces/shell/: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
benchmark/generate_test_case/: Cargo.toml
benchmark/generate_test_case/src/: lib.rs
benchmark/tc1/: Cargo.toml  Makefile  admin.csv  artworks.csv  spaces.csv  tc1.jmx  tokens.csv
benchmark/tc1/src/: main.rs
design-system-preview/: Cargo.toml  Makefile
design-system-preview/src/: main.rs
(+7460 files in other folders)
