[workspace]
members = [
  "app/auth",
  "app/common",
  "app/posts",
  "app/shell",
  "app/socials/teams/pages/*",
  "app/socials/teams/shell",
  "app/socials/users/pages/*",
  "app/socials/users/shell",
  "app/spaces/actions/*",
  "app/spaces/pages/*",
  "app/spaces/shell",
  "packages/*",
]
resolver = "2"
exclude = ["benchmark/*", "deps", "packages/template"]

[workspace.package]
authors = ["Biyard"]
description = "Ratel"
edition = "2024"
repository = "https://github.com/biyard/ratel"
license = "MIT"

[workspace.dependencies]
bdk = { path = "packages/bdk", version = "0.1.*" }
btracing = { path = "packages/btracing", version = "0.1.*" }
by-axum = { path = "packages/by-axum", version = "0.2.*" }
by-types = { path = "packages/by-types", version = "0.3.*" }
rest-api = { path = "packages/rest-api", version = "0.1.*" }
dioxus-translate = { path = "packages/dioxus-translate", version = "0.1.*" }
dioxus-translate-types = { path = "packages/dioxus-translate-types", version = "0.1.*" }
dioxus-translate-macro = { path = "packages/dioxus-translate-macro", version = "0.1.*" }
by-macros = { path = "packages/by-macros", version = "0.6.*" }
common = { path = "app/common" }
ratel-auth = { path = "app/auth" }
ratel-post = { path = "app/posts" }

space-shell = { path = "app/spaces/shell" }
space-page-actions = { path = "app/spaces/pages/actions" }
space-page-apps = { path = "app/spaces/pages/apps" }
space-page-dashboard = { path = "app/spaces/pages/dashboard" }
space-page-overview = { path = "app/spaces/pages/overview" }
space-page-report = { path = "app/spaces/pages/report" }
space-action-poll = { path = "app/spaces/actions/poll" }

ratel-user-shell = { path = "app/socials/users/shell" }
ratel-user-credential = { path = "app/socials/users/pages/credential" }
ratel-user-draft = { path = "app/socials/users/pages/draft" }
ratel-user-membership = { path = "app/socials/users/pages/membership" }
ratel-user-post = { path = "app/socials/users/pages/post" }
ratel-user-reward = { path = "app/socials/users/pages/reward" }
ratel-user-setting = { path = "app/socials/users/pages/setting" }
ratel-user-space = { path = "app/socials/users/pages/space" }

ratel-team-shell = { path = "app/socials/teams/shell" }
ratel-team-dao = { path = "app/socials/teams/pages/dao" }
ratel-team-draft = { path = "app/socials/teams/pages/draft" }
ratel-team-group = { path = "app/socials/teams/pages/group" }
ratel-team-home = { path = "app/socials/teams/pages/home" }
ratel-team-member = { path = "app/socials/teams/pages/member" }
ratel-team-reward = { path = "app/socials/teams/pages/reward" }
ratel-team-setting = { path = "app/socials/teams/pages/setting" }

dioxus-components = { path = "app/interops/web-components" }
icons = { path = "packages/icons" }

bigdecimal = "0.4.7"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
dto = { path = "./packages/dto" }
sqlx = { version = "0.8.3", features = [
  "bigdecimal",
  "postgres",
  "runtime-tokio",
  "sqlite",
  "time",
] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
aide = { version = "0.15", git = "https://github.com/tamasfe/aide.git", features = [
  "axum",
  "axum-extra",
  "axum-extra-headers",
  "axum-extra-query",
  "axum-json",
  "axum-query",
  "macros",
  "redoc",
  "scalar",
  "swagger",
] }
axum = { version = "0.8.1", features = ["macros"] }
async-trait = "0.1.81"

aws-sdk-dynamodb = "1.92.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.16"
uuid = { version = "1.10.1", features = ["v7"] }
chrono = "0.4.39"
serde_with = "3.14.0"
percent-encoding = "2.3.2"
base64 = "0.22.1"
hyper = "1.6.0"

dioxus = { version = "0.7.1", features = ["fullstack", "router"] }

web-sys = "0.3"
wasm-bindgen = { version = "0.2", features = [] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[profile.bevy-wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
