[workspace]
members = [
  "app/ratel",
  "packages/*",
  "design-system-preview",
]
resolver = "2"
exclude = ["benchmark/*", "deps", "packages/template"]

[workspace.package]
authors = ["Biyard"]
description = "Ratel"
edition = "2024"
repository = "https://github.com/biyard/ratel"
license = "MIT"

[workspace.dependencies]
bdk = { path = "packages/bdk", version = "0.1.*" }
btracing = { path = "packages/btracing", version = "0.1.*" }
by-axum = { path = "packages/by-axum", version = "0.2.*" }
by-types = { path = "packages/by-types", version = "0.3.*" }
rest-api = { path = "packages/rest-api", version = "0.1.*" }
dioxus-translate = { path = "packages/dioxus-translate", version = "0.1.*", features = [
  "ko",
] }
dioxus-translate-types = { path = "packages/dioxus-translate-types", version = "0.1.*" }
dioxus-translate-macro = { path = "packages/dioxus-translate-macro", version = "0.1.*" }
by-macros = { path = "packages/by-macros", version = "0.6.*" }

dioxus-components = { path = "app/interops/web-components" }
icons = { path = "packages/icons" }

bigdecimal = "0.4.7"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "bigdecimal",
  "postgres",
  "runtime-tokio",
  "sqlite",
  "time",
] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
aide = { version = "0.15", git = "https://github.com/tamasfe/aide.git", features = [
  "axum",
  "axum-extra",
  "axum-extra-headers",
  "axum-extra-query",
  "axum-json",
  "axum-query",
  "macros",
  "redoc",
  "scalar",
  "swagger",
] }
axum = { version = "0.8.5", features = ["macros"] }
async-trait = "0.1.81"

aws-sdk-bedrockruntime = "1"
aws-sdk-dynamodb = "1.92.0"
aws-sdk-dynamodbstreams = "1"
qdrant-client = "1"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.16"
uuid = { version = "1.10.1", features = ["v4", "v7"] }
chrono = "0.4.39"
serde_with = "3.14.0"
percent-encoding = "2.3.2"
base64 = "0.22.1"
hyper = "1.6.0"

dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
lucide-dioxus = { version = "2.569.0", features = ["all-icons"] }

web-sys = {version = "0.3", features = ["Clipboard"] }
wasm-bindgen = { version = "0.2", features = [] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
