[package]
name = "ratel-auth"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_repr = "0.1.20"
serde_with = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sha3 = { version = "0.10.8", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4.3", optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
hmac = { version = "0.12.1", optional = true }
url = { version = "2", optional = true }
tower-sessions = { version = "0.15.0", optional = true }
tracing = { workspace = true, optional = true }
validator = { version = "0.20.0", optional = true }
regex = { version = "1", optional = true }
names = { version = "0.14.0", optional = true }

rand = { version = "0.9.1", optional = true }
aws-sdk-sns = { version = "1.83.0", optional = true }
aws-sdk-sesv2 = { version = "1.83.0", optional = true }
thiserror = { version = "2", optional = true }

web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }


[features]
default = []
bypass = []
web = ["common/web"]
desktop = ["common/desktop"]
mobile = ["common/mobile"]
server = [
    "common/server",
    "schemars",
    "aide",
    "serde_dynamo",
    "aws-sdk-dynamodb",
    "base64",
    "serde_json",
    "uuid",
    "reqwest",
    "sha3",
    "sha2",
    "hex",
    "hmac",
    "k256",
    "url",
    "tower-sessions",
    "tracing",
    "validator",
    "regex",
    "names",
    "rand",
    "aws-sdk-sns",
    "aws-sdk-sesv2",
    "thiserror",
]
