[package]
name = "common"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_with = { workspace = true }
thiserror = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.20"

by-macros = { workspace = true }
dioxus-translate = { workspace = true }
percent-encoding = { workspace = true }
async-trait = "0.1.88"
chrono = { workspace = true }
base64 = { workspace = true }
dioxus = { workspace = true }

# Server-only dependencies
bdk = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
ssi = { version = "0.12.0", features = ["bbs"], optional = true }
tokio = { workspace = true, optional = true }

dioxus-components = { workspace = true }
icons = { workspace = true }
lucide-dioxus = { workspace = true }


aws-sdk-dynamodb = { workspace = true, optional = true }
aws-config = { version = "1.5.10", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
aws-credential-types = { version = "1.2.6", optional = true }
aws-sdk-sns = { version = "1.83.0", optional = true }
aws-sdk-sesv2 = { version = "1.83.0", optional = true }

uuid = { workspace = true, optional = true }
tracing = { workspace = true }
tower-sessions = { version = "0.15.0", optional = true }
sha3 = { version = "0.10.8", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
url = { version = "2", optional = true }
reqwest = { workspace = true, optional = true }
strum = { version = "0.27.2", features = ["derive"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Blob",
    "File",
    "Headers",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "Response",
    "Window",
    "console",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "Document",
    "Window",
    "Element",
] }
js-sys = "0.3"

ethers = { version = "=2.0.14", optional = true }
urlencoding = "2.1.3"
names = { version = "0.14.0", optional = true }
tracing-wasm = "0.2.1"
dioxus-cli-config = "0.7.3"
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
tracing-subscriber.workspace = true
rand = { version = "0.10" }
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }

[features]
default = []
server = [
    "aide",
    "aws",
    "bdk/be",
    "dioxus/server",
    "ethers",
    "hex",
    "hmac",
    "middleware",
    "reqwest",
    "schemars",
    "serde_dynamo",
    "sha2",
    "sha3",
    "ssi",
    "tokio",
    "url",
    "reqwest",
    "ethers",
    "names",
]
aws = [
    "aws-config",
    "aws-credential-types",
    "aws-sdk-dynamodb",
    "aws-sdk-s3",
    "aws-sdk-sesv2",
    "aws-sdk-sns",
    "uuid",
]
middleware = ["tower-sessions"]
web = ["dioxus/web", "gloo-timers", "getrandom"]
mobile = ["dioxus/mobile"]
desktop = ["dioxus/desktop"]
getrandom = ["dep:getrandom"]
