[package]
name = "ratel-membership"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true }
serde_repr = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
random-string = { version = "1.1.0", optional = true }
tracing = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }

[features]
default = []
web = ["common/web", "dioxus/web", "ratel-auth/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "serde_json",
    "serde_repr",
    "schemars",
    "aide",
    "serde_dynamo",
    "aws-sdk-dynamodb",
    "uuid",
    "reqwest",
    "tokio",
    "async-trait",
    "percent-encoding",
    "random-string",
    "tracing",
]
