[package]
name = "ratel-post"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
dioxus = { workspace = true }
ratel-auth = { workspace = true }

web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

serde = { workspace = true }
serde_repr = "0.1.20"
serde_with = { workspace = true }
percent-encoding = { workspace = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tower-sessions = { version = "0.15.0", optional = true }
tracing = { workspace = true, optional = true }
regex = { version = "1", optional = true }


[features]
default = []
web = ["common/web", "ratel-auth/web", "gloo-timers"]
desktop = ["common/desktop", "ratel-auth/desktop"]
mobile = ["common/mobile", "ratel-auth/mobile"]
server = [
    "common/server", "ratel-auth/server",
    "schemars",
    "aide",
    "serde_dynamo",
    "aws-sdk-bedrockruntime",
    "aws-sdk-dynamodb",
    "base64",
    "uuid",
    "chrono",
    "tower-sessions",
    "tracing",
    "regex",
]
