[package]
name = "app-shell"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
space-shell = { workspace = true, optional = true }
tower-sessions = { version = "0.15.0", optional = true }
icons = { workspace = true }
serde_with = { workspace = true }
percent-encoding = { workspace = true }
aws-config = { version = "1.5.10", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
random-string = { version = "1.1.0", optional = true }
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }


[features]
full = ["membership","users", "teams"]
default = ["full"]
bypass = ["ratel-auth?/bypass"]
web = [
  "common/web",
  "ratel-auth/web",
  "space-shell/web",
  "ratel-post/web",
  "gloo-timers",
]
desktop = [
  "common/desktop",
  "ratel-auth/desktop",
  "space-shell/desktop",
  "ratel-post/desktop",
]
mobile = [
  "common/mobile",
  "ratel-auth/mobile",
  "space-shell/mobile",
  "ratel-post/mobile",
]
server = [
  "common/server",
  "ratel-auth/server",
  "space-shell/server",
  "ratel-post/server",
  "tower-sessions",
  "aws-config",
  "aws-sdk-s3",
  "random-string",
  "reqwest",
  "async-trait",
  "schemars",
  "aide",
  "tracing",
  "aws-sdk-dynamodb",
]

lambda = [ "server", "common/lambda" ]
membership = []
users = []
teams = []

[dev-dependencies]
axum = { workspace = true }
tower = { version = "0.5" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }