[package]
name = "generate_test_case"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ic-agent = "0.42.0"
ring = "0.16"
base64 = "0.22.1"
