[package]
name = "tc1"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
generate_test_case = { path = "../generate_test_case" }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
anyhow = "1.0"


serde = { version = "1.0", features = ["derive"] }
